--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -9,6 +9,8 @@ on:
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
+  # OpenCV version to be used to customize solution & tests
+  # OPENCV_VERSION: 4.2
 
 jobs:
   build:
@@ -19,6 +21,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
+    - name: OS Dependencies
+      # Install OS wide dependencies
+      run: apt install libgdal-dev libeigen3-dev
+
+    - name: Install OpenCV
+      # Install OpenCV specific deps
+      run: apt install libopencv-contrib-dev libopencv-core-dev libopencv-imgcodecs-dev
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
