--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -24,11 +24,11 @@ jobs:
 
     - name: OS Dependencies
       # Install OS wide dependencies
-      run: apt install libgdal-dev libeigen3-dev
+      run: sudo apt-get install libgdal-dev libeigen3-dev
 
     - name: Install OpenCV
       # Install OpenCV specific deps
-      run: apt install libopencv-contrib-dev libopencv-core-dev libopencv-imgcodecs-dev
+      run: sudo apt-get install libopencv-contrib-dev libopencv-core-dev libopencv-imgcodecs-dev
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
