--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -31,7 +31,7 @@ jobs:
       run: sudo apt-get install libopencv-contrib-dev libopencv-core-dev libopencv-imgcodecs-dev
 
     - name: Print post-installation information
-      run: sudo find / -name "OpenCVConfig.cmake"
+      run: dpkg -L libopencv-core-dev
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
