--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -28,10 +28,10 @@ jobs:
 
     - name: Install OpenCV
       # Install OpenCV specific deps
-      run: sudo apt-get install libopencv-contrib-dev libopencv-core-dev libopencv-imgcodecs-dev
+      run: sudo apt-get install libopencv-contrib-dev libopencv-core-dev libopencv-imgcodecs-dev libopencv-dev
 
     - name: Print post-installation information
-      run: dpkg -L libopencv-core-dev
+      run: dpkg -L libopencv-dev
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
