--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -28,7 +28,7 @@ jobs:
       # Install OS wide dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y libgdal-dev libeigen3-dev
+        sudo apt-get install -y libgdal-dev libeigen3-dev libyaml-cpp-dev
 
     - name: Install OpenCV
       # Install OpenCV specific deps
