--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -21,8 +21,7 @@ jobs:
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     runs-on: ubuntu-latest
-    if: | 
-      "contains(github.event.head_commit.message, '[ci]')"
+    if: contains(github.event.head_commit.message, '[ci]')
 
     steps:
     - uses: actions/checkout@v3
